--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Apple SD Gothic Neo', 'Noto Sans KR', 'NanumBarunGothic', '맑은 고딕',
+    'Malgun Gothic', '굴림', 'Gulim', '돋움', 'Dotum', 'Helvetica Neue',
+    'Helvetica', Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 
 
 code {
